WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
41657
QWebSettings leaks pixmaps at program end on X11
https://bugs.webkit.org/show_bug.cgi?id=41657
Summary
QWebSettings leaks pixmaps at program end on X11
marc
Reported
2010-07-06 00:19:23 PDT
On X11, when ending an application that used QtWebKit, I get an error message:
> ~QX11PixmapData(): QPixmap objects must be destroyed before the QApplication object, otherwise the native pixmap object will be leaked.
Attachments
Proposed fix
(1.99 KB, patch)
2010-07-06 00:26 PDT
,
marc
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
marc
Comment 1
2010-07-06 00:26:11 PDT
Created
attachment 60599
[details]
Proposed fix
Adam Barth
Comment 2
2010-07-07 03:25:32 PDT
Comment on
attachment 60599
[details]
Proposed fix Thanks for the informative ChangeLog. I'm not a Qt expert, but this change is convincing. Too bad memory leaks are hard to test...
marc
Comment 3
2010-07-07 03:38:20 PDT
Apparently, the warning is bogus, and removed in the upcoming Qt 4.7. Still, the change doesn't hurt, and avoids the warning on older Qt's, too.
WebKit Commit Bot
Comment 4
2010-07-07 04:39:30 PDT
Comment on
attachment 60599
[details]
Proposed fix Clearing flags on attachment: 60599 Committed
r62652
: <
http://trac.webkit.org/changeset/62652
>
WebKit Commit Bot
Comment 5
2010-07-07 04:39:35 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug